fix(www): fix overlapping errors toggling.

--- a/Security.Sample.www/error/error.css
+++ b/Security.Sample.www/error/error.css
@@ -7,6 +7,6 @@ error {
   left: 2rem;
   padding: 1rem;
   border: 1px solid var(--error-color);
-  color: var(--light-primary-color);
-  background-color: var(--primary-color);
+  color: var(--info-color);
+  background-color: var(--neutral-color);
 }
